Oauth pages layout issue resolve

--- a/src/components/Auth/Signin/Signin.css
+++ b/src/components/Auth/Signin/Signin.css
@@ -2,4 +2,7 @@
   .mainimg{
     display: none;
   }
+  .logo{
+    display: none;
+  }
 }
